--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "ros.distro": "galactic"
+    "ros.distro": "galactic",
+    "files.associations": {
+        "iostream": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
