--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "ros.distro": "galactic",
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "random": "cpp",
+        "algorithm": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
